FEAT:Support myir configure

--- a/conf/templates/default/bblayers.conf.sample
+++ b/conf/templates/default/bblayers.conf.sample
@@ -22,12 +22,9 @@ POKY_NON_REMOVABLE  = "${OEROOT}/layers/poky/meta"
 #
 BASELAYERS ?= " \
     ${OEROOT}/layers/meta-openembedded/meta-gnome \
-    ${OEROOT}/layers/meta-openembedded/meta-initramfs \
     ${OEROOT}/layers/meta-openembedded/meta-multimedia \
     ${OEROOT}/layers/meta-openembedded/meta-networking \
     ${OEROOT}/layers/meta-openembedded/meta-webserver \
-    ${OEROOT}/layers/meta-openembedded/meta-filesystems \
-    ${OEROOT}/layers/meta-openembedded/meta-perl \
 "
 
 BBLAYERS_NON_REMOVABLE ?= " \
@@ -35,7 +32,8 @@ BBLAYERS_NON_REMOVABLE ?= " \
   "
 
 BSPLAYER ?= " \
-    ${@'${OEROOT}/layers/meta-st/meta-st-stm32mp' if os.path.isfile('${OEROOT}/layers/meta-st/meta-st-stm32mp/conf/layer.conf') else ''} \
+    ${@'${OEROOT}/layers/meta-myir/meta-st-cannes2' if os.path.isfile('${OEROOT}/layers/meta-myir/meta-st-cannes2/conf/layer.conf') else ''} \
+    ${@'${OEROOT}/layers/meta-myir/meta-myir-stm32mp' if os.path.isfile('${OEROOT}/layers/meta-myir/meta-myir-stm32mp/conf/layer.conf') else ''} \
     "
 
 ADDONSLAYERS = ""
@@ -44,21 +42,30 @@ ADDONSLAYERS += "${@'${OEROOT}/layers/meta-linaro/meta-linaro' if os.path.isfile
 ADDONSLAYERS += "${@'${OEROOT}/layers/meta-linaro/meta-linaro-toolchain' if os.path.isfile('${OEROOT}/layers/meta-linaro/meta-linaro-toolchain/conf/layer.conf') else ''}"
 ADDONSLAYERS += "${@'${OEROOT}/layers/meta-openembedded/meta-networking' if os.path.isfile('${OEROOT}/layers/meta-linaro/meta-linaro/conf/layer.conf') else ''}"
 
+
 # Qt5
 ADDONSLAYERS += "${@'${OEROOT}/layers/meta-qt5' if os.path.isfile('${OEROOT}/layers/meta-qt5/conf/layer.conf') else ''}"
 
 # Security layer
 ADDONSLAYERS += " \
     ${@'${OEROOT}/layers/meta-security \
+    ${OEROOT}/layers/meta-openembedded/meta-filesystems \
+    ${OEROOT}/layers/meta-openembedded/meta-perl \
     ${OEROOT}/layers/meta-security/meta-tpm' \
     if os.path.isfile('${OEROOT}/layers/meta-security/conf/layer.conf') else ''} \
     "
 
 # specific to framework
-FRAMEWORKLAYERS += "${@'${OEROOT}/layers/meta-st/meta-st-openstlinux' if os.path.isfile('${OEROOT}/layers/meta-st/meta-st-openstlinux/conf/layer.conf') else ''}"
+FRAMEWORKLAYERS += "${@'${OEROOT}/layers/meta-myir/meta-myir-openstlinux' if os.path.isfile('${OEROOT}/layers/meta-myir/meta-myir-openstlinux/conf/layer.conf') else ''}"
 
+# switch layer
+SWITCHLAYER ?= "\
+    ${@'${OEROOT}/layers/meta-myir/meta-myir-stm32mp-tsn-acm' if os.path.isfile('${OEROOT}/layers/meta-myir/meta-myir-stm32mp-tsn-acm/conf/layer.conf') else ''} \
+    ${@'${OEROOT}/layers/meta-myir/meta-myir-stm32mp-tsn-swch' if os.path.isfile('${OEROOT}/layers/meta-myir/meta-myir-stm32mp-tsn-swch/conf/layer.conf') else ''} \
+"
 # add BSP layer
 BBLAYERS += " \
+    ${SWITCHLAYER} \
     ${BASELAYERS} \
     ${BSPLAYER} \
     ${ADDONSLAYERS} \
